--- a/package.json
+++ b/package.json
@@ -40,7 +40,9 @@
   "type": "module",
   "dependencies": {
     "clsx": "^2.1.1",
+    "fabric": "^5.4.0",
     "tailwind-merge": "^2.5.0",
-    "tailwind-variants": "^0.2.1"
+    "tailwind-variants": "^0.2.1",
+    "zimjs": "^16.4.4"
   }
 }
