--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@tailwindcss/typography": "^0.5.14",
     "@types/eslint": "^9.6.0",
     "autoprefixer": "^10.4.20",
+    "bits-ui": "^0.21.13",
     "eslint": "^9.0.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-svelte": "^2.36.0",
@@ -31,6 +32,7 @@
     "prettier-plugin-tailwindcss": "^0.6.5",
     "svelte": "5.0.0-next.216",
     "svelte-check": "^3.6.0",
+    "svelte-radix": "^1.1.0",
     "tailwindcss": "^3.4.9",
     "typescript": "^5.0.0",
     "typescript-eslint": "^8.0.0",
