--- a/package.json
+++ b/package.json
@@ -44,7 +44,6 @@
     "clsx": "^2.1.1",
     "fabric": "^5.4.0",
     "tailwind-merge": "^2.5.0",
-    "tailwind-variants": "^0.2.1",
-    "zimjs": "^16.4.4"
+    "tailwind-variants": "^0.2.1"
   }
 }
